# Source/CodeGen/v1/Rust/VitalServiceApiClient/src/models/mod.rs
@@ -42,12 +42,14 @@ pub mod get_processes_to_add_response;
 pub use self::get_processes_to_add_response::GetProcessesToAddResponse;
 pub mod get_running_processes_response;
 pub use self::get_running_processes_response::GetRunningProcessesResponse;
+pub mod gpu_clock_speeds;
+pub use self::gpu_clock_speeds::GpuClockSpeeds;
 pub mod gpu_data;
 pub use self::gpu_data::GpuData;
+pub mod gpu_usage;
+pub use self::gpu_usage::GpuUsage;
 pub mod gpu_usage_metric_model;
 pub use self::gpu_usage_metric_model::GpuUsageMetricModel;
-pub mod gpu_usages;
-pub use self::gpu_usages::GpuUsages;
 pub mod hardware_metric_model;
 pub use self::hardware_metric_model::HardwareMetricModel;
 pub mod influx_db_settings;
